--- a/index.html
+++ b/index.html
@@ -19,10 +19,19 @@
         <!-- FONT AWESOME CSS -->
         <link rel="stylesheet" href="assets/vendor/css/all.min.css" />
 
+        <!-- Animation On Scroll(AOS) CSS-->
+        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
         <!-- CUSTOM CSS -->
         <link rel="stylesheet" href="assets/css/style.css" />
     </head>
     <body>
+        <div class="preloader">
+            <div class="loader">
+                <img src="assets/img/preloader.gif" alt="" />
+            </div>
+        </div>
+
         <header>
             <div class="container-fluid">
                 <div class="row align-items-center">
@@ -209,20 +218,20 @@
                 <div class="container">
                     <div class="row justify-content-between align-items-center">
                         <div class="col-xl-5 col-lg-5">
-                            <div class="service-img d-flex">
+                            <div class="service-img d-flex" data-aos="fade-right">
                                 <img src="assets/img/service/car.png" alt="" />
                             </div>
                         </div>
 
                         <div class="col-xl-6 col-lg-7">
                             <div class="service-content">
-                                <div class="section-heading">
+                                <div class="section-heading" data-aos="fade-in">
                                     <span class="service-subtitle">best services</span>
                                     <h2>Wonderful experience with our best deals</h2>
                                 </div>
 
                                 <div class="services">
-                                    <div class="single-service">
+                                    <div class="single-service" data-aos="fade-up">
                                         <img src="assets/img/service/service-icon-1.png" alt="" />
                                         <div class="single-service-details">
                                             <h3>We always offer happy discounts!</h3>
@@ -230,7 +239,7 @@
                                         </div>
                                     </div>
 
-                                    <div class="single-service">
+                                    <div class="single-service" data-aos="fade-up">
                                         <img src="assets/img/service/service-icon-2.png" alt="" />
                                         <div class="single-service-details">
                                             <h3>We are always on your time.</h3>
@@ -238,7 +247,7 @@
                                         </div>
                                     </div>
 
-                                    <div class="single-service">
+                                    <div class="single-service" data-aos="fade-up">
                                         <img src="assets/img/service/service-icon-3.png" alt="" />
                                         <div class="single-service-details">
                                             <h3>Your safety is our 1st priority :)</h3>
@@ -328,7 +337,7 @@
 
                             <div class="row">
                                 <div class="col-lg-4 col-6 col-xxs-11">
-                                    <div class="single-city">
+                                    <div class="single-city" data-aos="fade-up">
                                         <div class="single-city-img">
                                             <img src="assets/img/choose/city-1.png" alt="" />
                                         </div>
@@ -336,7 +345,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-4 col-6 col-xxs-11">
-                                    <div class="single-city">
+                                    <div class="single-city" data-aos="fade-up">
                                         <div class="single-city-img">
                                             <img src="assets/img/choose/city-2.png" alt="" />
                                         </div>
@@ -344,7 +353,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-4 col-6 col-xxs-11">
-                                    <div class="single-city">
+                                    <div class="single-city" data-aos="fade-up">
                                         <div class="single-city-img">
                                             <img src="assets/img/choose/city-3.png" alt="" />
                                         </div>
@@ -352,7 +361,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-4 col-6 col-xxs-11">
-                                    <div class="single-city">
+                                    <div class="single-city" data-aos="fade-up">
                                         <div class="single-city-img">
                                             <img src="assets/img/choose/city-4.png" alt="" />
                                         </div>
@@ -360,7 +369,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-4 col-6 col-xxs-11">
-                                    <div class="single-city">
+                                    <div class="single-city" data-aos="fade-up">
                                         <div class="single-city-img">
                                             <img src="assets/img/choose/city-5.png" alt="" />
                                         </div>
@@ -368,7 +377,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-4 col-6 col-xxs-11">
-                                    <div class="single-city">
+                                    <div class="single-city" data-aos="fade-up">
                                         <div class="single-city-img">
                                             <img src="assets/img/choose/city-6.png" alt="" />
                                         </div>
@@ -387,7 +396,7 @@
 
                             <div class="row">
                                 <div class="col-lg-4 col-6 col-xxs-11">
-                                    <div class="single-city">
+                                    <div class="single-city" data-aos="fade-up">
                                         <div class="single-city-img">
                                             <img src="assets/img/choose/city-1.png" alt="" />
                                         </div>
@@ -395,7 +404,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-4 col-6 col-xxs-11">
-                                    <div class="single-city">
+                                    <div class="single-city" data-aos="fade-up">
                                         <div class="single-city-img">
                                             <img src="assets/img/choose/city-2.png" alt="" />
                                         </div>
@@ -403,7 +412,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-4 col-6 col-xxs-11">
-                                    <div class="single-city">
+                                    <div class="single-city" data-aos="fade-up">
                                         <div class="single-city-img">
                                             <img src="assets/img/choose/city-3.png" alt="" />
                                         </div>
@@ -411,7 +420,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-4 col-6 col-xxs-11">
-                                    <div class="single-city">
+                                    <div class="single-city" data-aos="fade-up">
                                         <div class="single-city-img">
                                             <img src="assets/img/choose/city-4.png" alt="" />
                                         </div>
@@ -419,7 +428,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-4 col-6 col-xxs-11">
-                                    <div class="single-city">
+                                    <div class="single-city" data-aos="fade-up">
                                         <div class="single-city-img">
                                             <img src="assets/img/choose/city-5.png" alt="" />
                                         </div>
@@ -427,7 +436,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-4 col-6 col-xxs-11">
-                                    <div class="single-city">
+                                    <div class="single-city" data-aos="fade-up">
                                         <div class="single-city-img">
                                             <img src="assets/img/choose/city-6.png" alt="" />
                                         </div>
@@ -446,7 +455,7 @@
 
                             <div class="row">
                                 <div class="col-lg-4 col-6 col-xxs-11">
-                                    <div class="single-city">
+                                    <div class="single-city" data-aos="fade-up">
                                         <div class="single-city-img">
                                             <img src="assets/img/cars/experience-section.png" alt="" />
                                         </div>
@@ -454,7 +463,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-4 col-6 col-xxs-11">
-                                    <div class="single-city">
+                                    <div class="single-city" data-aos="fade-up">
                                         <div class="single-city-img">
                                             <img src="assets/img/hero-img/car.png" alt="" />
                                         </div>
@@ -462,7 +471,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-4 col-6 col-xxs-11">
-                                    <div class="single-city">
+                                    <div class="single-city" data-aos="fade-up">
                                         <div class="single-city-img">
                                             <img src="assets/img/service/car.png" alt="" />
                                         </div>
@@ -470,7 +479,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-4 col-6 col-xxs-11">
-                                    <div class="single-city">
+                                    <div class="single-city" data-aos="fade-up">
                                         <div class="single-city-img">
                                             <img src="assets/img/hero-img/car.png" alt="" />
                                         </div>
@@ -478,7 +487,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-4 col-6 col-xxs-11">
-                                    <div class="single-city">
+                                    <div class="single-city" data-aos="fade-up">
                                         <div class="single-city-img">
                                             <img src="assets/img/guide/guide-img-car.png" alt="" />
                                         </div>
@@ -486,7 +495,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-4 col-6 col-xxs-11">
-                                    <div class="single-city">
+                                    <div class="single-city" data-aos="fade-up">
                                         <div class="single-city-img">
                                             <img src="assets/img/cars/experience-section.png" alt="" />
                                         </div>
@@ -505,7 +514,7 @@
 
                             <div class="row">
                                 <div class="col-lg-4 col-6 col-xxs-11">
-                                    <div class="single-city">
+                                    <div class="single-city" data-aos="fade-up">
                                         <div class="single-city-img">
                                             <img src="assets/img/choose/city-1.png" alt="" />
                                         </div>
@@ -513,7 +522,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-4 col-6 col-xxs-11">
-                                    <div class="single-city">
+                                    <div class="single-city" data-aos="fade-up">
                                         <div class="single-city-img">
                                             <img src="assets/img/choose/city-2.png" alt="" />
                                         </div>
@@ -521,7 +530,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-4 col-6 col-xxs-11">
-                                    <div class="single-city">
+                                    <div class="single-city" data-aos="fade-up">
                                         <div class="single-city-img">
                                             <img src="assets/img/choose/city-3.png" alt="" />
                                         </div>
@@ -529,7 +538,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-4 col-6 col-xxs-11">
-                                    <div class="single-city">
+                                    <div class="single-city" data-aos="fade-up">
                                         <div class="single-city-img">
                                             <img src="assets/img/choose/city-4.png" alt="" />
                                         </div>
@@ -537,7 +546,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-4 col-6 col-xxs-11">
-                                    <div class="single-city">
+                                    <div class="single-city" data-aos="fade-up">
                                         <div class="single-city-img">
                                             <img src="assets/img/choose/city-5.png" alt="" />
                                         </div>
@@ -545,7 +554,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-4 col-6 col-xxs-11">
-                                    <div class="single-city">
+                                    <div class="single-city" data-aos="fade-up">
                                         <div class="single-city-img">
                                             <img src="assets/img/choose/city-6.png" alt="" />
                                         </div>
@@ -567,7 +576,7 @@
                             <div class="section-heading">
                                 <span class="guide-subtitle">Are you finding booking option</span>
                                 <h2>Book a Quickcab in just 4 steps</h2>
-                                <img src="assets/img/guide/guide-img-car.png" alt="" />
+                                <img src="assets/img/guide/guide-img-car.png" alt="" data-aos="slide-left" />
                             </div>
                         </div>
 
@@ -625,7 +634,7 @@
                     </div>
 
                     <div class="experience-car text-center">
-                        <img src="assets/img/cars/experience-section.png" alt="" class="img-fluid" />
+                        <img src="assets/img/cars/experience-section.png" alt="" class="img-fluid" data-aos="slide-right" />
                     </div>
 
                     <!-- BOTTOM ROW STARTS HERE -->
@@ -690,7 +699,7 @@
             <div class="container">
                 <!-- ! FOOTER TOP START HERE ! -->
                 <div class="footer-top">
-                    <div class="row justify-content-md-center justify-content-left gy-4">
+                    <div class="row justify-content-md-evenly justify-content-left gy-4">
                         <div class="col-xl-2 col-lg-3 col-md-4 col-6 col-xxs-12">
                             <div class="footer-widget">
                                 <h3>Quick Links</h3>
@@ -738,10 +747,10 @@
                                 </div>
 
                                 <div class="socials">
-                                    <i class="fa-brands fa-facebook-f"></i>
-                                    <i class="fa-brands fa-twitter"></i>
-                                    <i class="fa-brands fa-linkedin-in"></i>
-                                    <i class="fa-brands fa-instagram"></i>
+                                    <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                                    <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -778,6 +787,11 @@
         </footer>
         <!------------!-------------- FOOTER SECTION END -------------!------------>
 
+        <!-- back to top button-->
+        <button class="back__to__top">
+            <i class="fa-solid fa-arrow-up"></i>
+        </button>
+
         <!-- jquery JS -->
         <script src="assets/vendor/js/jquery.min.js"></script>
 
@@ -790,8 +804,8 @@
         <!-- TINY SLIDER JS -->
         <script src="assets/vendor/js/tiny-slider.js"></script>
 
-        <!-- FONT-AWESOME JS -->
-        <!-- <script src="assets/vendor/js/all.min.js"></script> -->
+        <!-- AOS JS -->
+        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 
         <!-- CUSTOM JS -->
         <script src="assets/js/main.js"></script>
