--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                     </div>
                                 </div>
                                 <div class="car-container">
-                                    <img src="assets/img/hero-img/car.png" alt="" class="car-img" />
+                                    <img src="assets/img/hero-img/car.png" alt="" class="car-img" data-aos="slide-left" />
                                 </div>
                             </div>
                         </div>
@@ -633,8 +633,8 @@
                         </div>
                     </div>
 
-                    <div class="experience-car text-center">
-                        <img src="assets/img/cars/experience-section.png" alt="" class="img-fluid" data-aos="slide-right" />
+                    <div class="experience-car text-center" data-aos="slide-right">
+                        <img src="assets/img/cars/experience-section.png" alt="" class="img-fluid" />
                     </div>
 
                     <!-- BOTTOM ROW STARTS HERE -->
